# mesos-dev-template

./: CMakeLists.txt  LICENSE  README.md
cmake-modules/: FindMesos.cmake
src/: main.cpp
